Fix overflowing margin from child elements

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@ body {
 .view {
   width: 100%;
   height: 100%;
+  overflow: scroll;
 
   // Home
 
